--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
+    "coverage": "vitest run --coverage",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
@@ -14,6 +15,7 @@
   "dependencies": {
     "@peculiar/webcrypto": "^1.4.1",
     "@tailwindcss/forms": "^0.5.3",
+    "@vitest/coverage-c8": "^0.29.2",
     "mdi-vue": "^3.0.13",
     "vue": "^3.2.47"
   },
@@ -34,7 +36,7 @@
     "tailwindcss": "^3.2.7",
     "typescript": "~4.7.4",
     "vite": "^4.1.3",
-    "vitest": "^0.28.5",
+    "vitest": "^0.29.2",
     "vue-tsc": "^1.1.5"
   }
 }
